# RubikSim

./: CMakeLists.txt  README.md
src/: main.cpp  notes.txt  renderingnotes.txt
src/app/: Application.cpp  Application.hpp
src/renderer/: Mesh.cpp  Mesh.hpp  mesh-hpp.txt
